jobs sorting added

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -21,6 +21,9 @@ Processors
 <br />
 <button id='alloc' onclick="alloc()">Allocate</button>
 
+<br />
+Jobs Sorting
+<table id='jobSorting'></table>
 
 <script src="app.js"></script>
 <script type="text/javascript" src="js/MooTools-Core-1.6.0.js" ></script>
