--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -25,6 +25,15 @@ Processors
 Jobs Sorting
 <table id='jobSorting'></table>
 
+<br />
+Processors Sorting
+<table id='procSorting'></table>
+
+
+<br />
+Gant Chart
+<table id='gant'></table>
+
 <script src="app.js"></script>
 <script type="text/javascript" src="js/MooTools-Core-1.6.0.js" ></script>
 </html>
